# kinectAR

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.orig  TODO  config.h.in  config.status  configure  configure.ac  detectMarker.cpp  libtool  params.txt
Data/: marker2.dat~
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/: GlutViewer.h  calibrateCamera.h  cparams.h  imageReceiver.h  kinectAR.h  kinectMarker.h
src/: GlutViewer.cpp  calibrateCamera.cpp  detectMarker.cpp  imageReceiver.cpp  intMessager.cpp  kinectAR.cpp  kinectMarker.cpp  receive.cpp  streampic.cpp
streamPic/: imageReceiver.h  receive.cpp  streampic.cpp
